--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -1,11 +1,7 @@
-// http://ionicframework.com/docs/v2/theming/
-
-
-// App Shared Imports
-// --------------------------------------------------
-// These are the imports which make up the design of this app.
-// By default each design mode includes these shared imports.
-// App Shared Sass variables belong in app.variables.scss.
+// Put fab icons in top of everything
+button[fab] {
+  z-index: 9999
+}
 
 @import "../pages/home/home";
 @import "../pages/welcome/welcome";
