feat: Implement tasks

--- a/app/components/list-element/list-element.html
+++ b/app/components/list-element/list-element.html
@@ -3,6 +3,6 @@
     {{ list.name }}
   </div>
   <div class="list-body">
-
+    <task-element *ngFor="let task of list.tasks" [task]="task"></task-element>
   </div>
 </ion-col>
