--- a/app/components/list-element/list-element.scss
+++ b/app/components/list-element/list-element.scss
@@ -1,6 +1,7 @@
 .list-element {
   background-color: #e9e9e9;
   width: 250px;
+  height: 100%;
   margin-right: 20px;
   padding: 0 0 3px 0;
   min-height: 100%;
@@ -11,5 +12,10 @@
     padding: 10px 0;
     font-weight: 700;
     font-size: 16px;
+  }
+
+  .list-body {
+    // Allows dropping tasks at the bottom of the list
+    height: 100%;
   }
 }
