feat: Implement task page

--- a/app/components/task-element/task-element.html
+++ b/app/components/task-element/task-element.html
@@ -1,4 +1,4 @@
-<ion-card class="task-element">
+<ion-card class="task-element" (click)="openTask()">
   <ion-card-content>
     {{ task.name }}
   </ion-card-content>
