--- a/app/components/list-element/list-element.scss
+++ b/app/components/list-element/list-element.scss
@@ -15,7 +15,7 @@
   }
 
   .list-body {
-    // Allows dropping tasks at the bottom of the list
+    // Allows dropping items at the bottom of the list
     height: 100%;
   }
 }
