feat: Implement support for teams

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,3 +11,4 @@ button[fab] {
 
 @import "../components/vertical-relation/vertical-relation";
 @import "../components/horizontal-relation/horizontal-relation";
+@import "../components/user-list/user-list";
