--- a/app/components/user-list/user-list.scss
+++ b/app/components/user-list/user-list.scss
@@ -11,4 +11,27 @@
     text-align: center;
     vertical-align: text-top;
   }
+
+  .user-content {
+    width: 100%;
+  }
+
+  .selected-icon {
+    display: none;
+    float: right;
+    text-align: right;
+
+    ion-icon {
+      line-height: 2;
+      font-size: 2.5em;
+    }
+  }
+
+  .selected {
+    background-color: #e9e9e9;
+
+    .selected-icon {
+      display: block;
+    }
+  }
 }
